CHANGE to persistent logfiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ cronitor:
     - 8434:8434
   volumes:
     - .:/opt/cronitor
-    - /mnt/hdd/storage/cronitor-log:/var/log/cronitor
+    - ./cronitor-log:/var/log/cronitor
   tty: true   
